<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#88888888"
	android:layout_height="fill_parent" android:id="@+id/RelativeLayoutIntro" android:layout_width="fill_parent" android:layout_gravity="center">

	

<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_centerHorizontal="true"><ImageView android:layout_below="@id/RelativeLayout01" android:background="@drawable/welcom_back" android:id="@+id/welcome_background" android:layout_height="fill_parent" android:layout_width="fill_parent"></ImageView><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_height="fill_parent" android:layout_centerInParent="true" android:layout_centerVertical="true" android:gravity="center" android:layout_width="wrap_content">
		
		
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal" android:text="@string/app_name" android:textSize="20dip" android:typeface="sans" android:textStyle="bold" android:textColor="#FFFFFF" android:textColorHint="#000000" android:layout_marginBottom="5dip" android:layout_marginTop="35dip" android:id="@+id/gameIntroTitleText"/><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#FFFFFF" android:text="@string/intro_msg_one" android:textStyle="bold" android:id="@+id/gameIntroMsgTextOne" android:textSize="15dip"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_msg_two" android:textColor="#FFFFFF" android:textStyle="bold" android:id="@+id/gameIntroMsgTextTwo" android:textSize="15dip"></TextView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/startButton" android:layout_centerHorizontal="true" android:layout_centerInParent="true" android:gravity="center" android:text="@string/game_button_msg" android:layout_marginTop="15dip" android:layout_marginBottom="10dip"/><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/instructionsButton" android:text="@string/instructions_button_msg" android:textSize="13dip" android:layout_marginBottom="5dip"></Button>


</LinearLayout></RelativeLayout>

</RelativeLayout>