<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#88888888" 
	android:layout_height="fill_parent"
	android:id="@+id/RelativeLayoutIntro" 
	android:layout_width="fill_parent"
	android:layout_gravity="center">

	<ImageView 
		android:id="@+id/game_over" 
		android:layout_height="fill_parent"
		android:layout_width="fill_parent" 
		android:background="@drawable/lose_back">
	</ImageView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_centerInParent="true"
		android:id="@+id/instructionsContentLinearLayout" android:gravity="top|center_horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/space_holder">
		</TextView>

		<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/space_holder">
		</TextView>

		<TextView android:id="@+id/lost_game_copy" android:text="@string/game_lost_text"
			android:textColor="#FFFFFF" android:layout_height="wrap_content"
			android:layout_width="wrap_content">
		</TextView>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/startButton"
			android:layout_centerHorizontal="true" android:layout_centerInParent="true"
			android:layout_marginTop="15dip" android:text="@string/game_over_button"
			android:gravity="center_vertical|center" />









</LinearLayout>

</RelativeLayout>